--- a/index.html
+++ b/index.html
@@ -4,37 +4,15 @@
       <title>Harris Lynch</title>
       <meta charset="UTF-8">
       <link rel="stylesheet" href="actualStyle.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-      <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
       <div id="main">
-        <div id="contact">
-          <table width="100%">
-            <td><hr/></td>
-            <td style="width:1px; padding: 0 10px; white-space: nowrap;">
-              <a href="contact.html">CONTACT</a>
-            </td>
-            <td><hr/></td>
-          </table>
-        </div>
-        <div id="name">HARRIS LYNCH</div>
-        <div id="resume">
-          <table width="100%">
-            <td><hr/></td>
-            <td style="width:1px; padding: 0 10px; white-space: nowrap;">
-              <a href="Resume.pdf">RESUME</a>
-            </td>
-            <td><hr/></td>
-          </table>
-        </div>
+        <div id="name">HARRIS LYNCH</div><br>
+        <a href="https://www.facebook.com/profile.php?id=100008180716761" id="fb">FACEBOOK | </a>
+        <a href="https://github.com/hjlynch2" id="gh">GITHUB | </a>
+        <a href="https://www.linkedin.com/in/harrislynch" id="li">LINKEDIN</a><br><br>
+        <a href="Resume.pdf">RESUME | </a>
+        <a href="project.html"> PROJECTS </a>
       </div>
-      <div id="quote1" class="quote">"He's the kind of man who does his chores without being told."<br>-Mom</div>
-      <div id="quote2" class="quote">"Harris is, without a doubt, the coolest cat in town"<br>-Bill Gates</div>
-      <div id="quote3" class="quote">"9/10, immersive story mode and beautiful graphics"<br>-IGN</div>
-      <div id="quote4" class="quote">"He's okay."<br>-Friend</div>
-      <div id="quote5" class="quote">"Harris always has gum on him"<br>-Random classmate</div>
-      <div id="quote6" class="quote">"He made a helluva mouse."<br>-Chuck E. Cheese manager</div>
-      <div id="quote7" class="quote">"This kid literally invented the internet."<br>-Smart man</div>
   </body>
 </html>
