--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <a href="https://github.com/hjlynch2" id="gh">GITHUB | </a>
         <a href="https://www.linkedin.com/in/harrislynch" id="li">LINKEDIN</a><br><br>
         <a href="Resume.pdf">RESUME | </a>
-        <a href="project.html"> PROJECTS </a>
+        <a href="project.html"> PROJECTS |</a>
+        <a href="about.html"> ABOUT </a>
       </div>
   </body>
 </html>
