--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
   </head>
   <body>
       <div id="main">
-        <div id="name">HARRIS LYNCH</div><br>
-        <a href="https://www.facebook.com/profile.php?id=100008180716761" id="fb">FACEBOOK | </a>
-        <a href="https://github.com/hjlynch2" id="gh">GITHUB | </a>
-        <a href="https://www.linkedin.com/in/harrislynch" id="li">LINKEDIN</a><br><br>
-        <a href="Resume.pdf">RESUME | </a>
-        <a href="project.html"> PROJECTS |</a>
-        <a href="about.html"> ABOUT </a>
+        <div id="name" style="display:block">HARRIS LYNCH</div>
+        <div style="display:block">
+            <a href="https://www.facebook.com/profile.php?id=100008180716761" id="fb">FACEBOOK | </a>
+            <a href="https://github.com/hjlynch2" id="gh">GITHUB | </a>
+            <a href="https://www.linkedin.com/in/harrislynch" id="li">LINKEDIN</a>
+        </div>
+        <div style="display:block">
+            <a href="Resume.pdf">RESUME | </a>
+            <a href="project.html"> PROJECTS |</a>
+            <a href="about.html"> ABOUT </a>
+        </div>
       </div>
   </body>
 </html>
