--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
       <link rel="stylesheet" href="actualStyle.css">
   </head>
   <body>
-      
+    <div id="about">
+      Nothing here yet! Check back soon.
+    </div>
   </body>
 </html>
