--- a/index.html
+++ b/index.html
@@ -1,23 +1,157 @@
 <!DOCTYPE html>
-<html>
-  <head>
-      <title>Harris Lynch</title>
-      <meta charset="UTF-8">
-      <link rel="stylesheet" href="actualStyle.css">
-  </head>
-  <body>
-      <div id="main">
-        <div id="name" style="display:block">HARRIS LYNCH</div>
-        <div style="display:block">
-            <a href="https://www.facebook.com/profile.php?id=100008180716761" id="fb">FACEBOOK | </a>
-            <a href="https://github.com/hjlynch2" id="gh">GITHUB | </a>
-            <a href="https://www.linkedin.com/in/harrislynch" id="li">LINKEDIN</a>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Harris Lynch</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/grayscale.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <span class="light">Harris</span> Lynch
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about">About Me</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#downloads">Projects</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-        <div style="display:block">
-            <a href="Resume.pdf">RESUME | </a>
-            <a href="project.html"> PROJECTS |</a>
-            <a href="about.html"> ABOUT </a>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Intro Header -->
+    <header class="intro">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <h1 class="brand-heading">Harris Lynch</h1>
+                        <p class="intro-text">University of Illinois Computer Science Student</br></p>
+                        <a href="#about" class="btn btn-circle page-scroll">
+                            <i class="fa fa-angle-double-down animated"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-  </body>
+    </header>
+
+    <!-- About Section -->
+    <section id="about" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>About Me</h2>
+                <p>I'm a student at the University of Illinois in Urbana Champaign studying Computer Science. I'm interested in Data Science, Machine Learning, and Security.
+                When I'm not hacking away at another Machine Problem, I enjoy hiking, playing Volleyball, and watching The Office an unhealthy amount of times.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Download Section -->
+    <section id="downloads" class="content-section text-center">
+        <div class="download-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2>Check out these sweet projects</h2>
+                    <a target="_blank" href="http://chillwithme.xyz" class="btn btn-default btn-lg">Chill With Me</a>
+                    <a target="_blank" href="https://github.com/hjlynch2" class="btn btn-default btn-lg">Random Code I've Written</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2 style="font-size:50px;">Contact</h2>
+                <p>Feel free to contact me or just poke around on any of these sites.</p>
+                <ul class="list-inline banner-social-buttons">
+                    <li>
+                        <a target="_blank" href="https://www.facebook.com/profile.php?id=100008180716761" class="btn btn-default btn-lg"><span class="network-name">Facebook</span></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://github.com/hjlynch2" class="btn btn-default btn-lg"><span class="network-name">Github</span></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.linkedin.com/in/harrislynch" class="btn btn-default btn-lg"><span class="network-name">LinkedIn</span></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="Resume.pdf" class="btn btn-default btn-lg"><span class="network-name">Resume</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container text-center">
+            <p>Copyright &copy; Harris Lynch 2016</p>
+        </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/grayscale.js"></script>
+
+</body>
+
 </html>
