--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Check out these sweet projects</h2>
                     <a target="_blank" href="http://chillwithme.xyz" class="btn btn-default btn-lg">Chill With Me</a>
-                    <a target="_blank" href="https://github.com/hjlynch2" class="btn btn-default btn-lg">Random Code I've Written</a>
+                    <a target="_blank" href="https://github.com/hjlynch2" class="btn btn-default btn-lg">Random Code I Wrote</a>
                 </div>
             </div>
         </div>
