--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
+    <script src="//fast.eager.io/WduJvMSL2z.js"></script>
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -33,40 +35,7 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <span class="light">Harris</span> Lynch
-                </a>
-            </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About Me</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#downloads">Projects</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
 
     <!-- Intro Header -->
     <header class="intro">
@@ -76,69 +45,11 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Harris Lynch</h1>
                         <p class="intro-text">University of Illinois Computer Science Student</br></p>
-                        <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Me</h2>
-                <p>I'm a student at the University of Illinois in Urbana Champaign studying Computer Science. I'm interested in Data Science, Machine Learning, and Security.
-                When I'm not hacking away at another Machine Problem, I enjoy hiking, playing Volleyball, and watching The Office an unhealthy amount of times.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Download Section -->
-    <section id="downloads" class="content-section text-center">
-        <div class="download-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Check out these sweet projects</h2>
-                    <a target="_blank" href="http://chillwithme.xyz" class="btn btn-default btn-lg">Chill With Me</a>
-                    <a target="_blank" href="https://github.com/hjlynch2" class="btn btn-default btn-lg">Random Code I Wrote</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2 style="font-size:50px;">Contact</h2>
-                <p>Feel free to contact me or just poke around on any of these sites.</p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a target="_blank" href="https://www.facebook.com/profile.php?id=100008180716761" class="btn btn-default btn-lg"><span class="network-name">Facebook</span></a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="https://github.com/hjlynch2" class="btn btn-default btn-lg"><span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="https://www.linkedin.com/in/harrislynch" class="btn btn-default btn-lg"><span class="network-name">LinkedIn</span></a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="Resume.pdf" class="btn btn-default btn-lg"><span class="network-name">Resume</span></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; Harris Lynch 2016</p>
-        </div>
-    </footer>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
