changed background to space

--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
-    <script src="//fast.eager.io/WduJvMSL2z.js"></script>
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -35,16 +33,25 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-
-
     <!-- Intro Header -->
     <header class="intro">
         <div class="intro-body">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Harris Lynch</h1>
-                        <p class="intro-text">University of Illinois Computer Science Student</br></p>
+                    <h1 class="brand-heading my-name">Harris Lynch</h1>
+                    <p class="intro-text">University of Illinois Computer Science Student<br></p>
+                    <div class="row">
+                        <ul class="list-inline">
+                            <li style="padding-right:2.5em">
+                                <a target="_blank" href="https://github.com/hjlynch2" class="custom-links">Github</a>
+                            </li>
+                            <li style="padding-right:2.5em">
+                                <a target="_blank" href="https://www.linkedin.com/in/harrislynch" class="custom-links">LinkedIn</a>
+                            </li>
+                            <li>
+                                <a target="_blank" href="Resume.pdf" class="custom-links">Resume</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
