--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-
+<div id="bg"><img src="img/uiuc.jpg" alt=""></div>
     <!-- Intro Header -->
     <header class="intro">
         <div class="intro-body">
@@ -42,10 +42,10 @@
                     <p class="intro-text">University of Illinois Computer Science Student<br></p>
                     <div class="row">
                         <ul class="list-inline">
-                            <li style="padding-right:2.5em">
+                            <li style="padding-right:1.5em">
                                 <a target="_blank" href="https://github.com/hjlynch2" class="custom-links">Github</a>
                             </li>
-                            <li style="padding-right:2.5em">
+                            <li style="padding-right:1.5em">
                                 <a target="_blank" href="https://www.linkedin.com/in/harrislynch" class="custom-links">LinkedIn</a>
                             </li>
                             <li>
