fixed line spacing

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="row">
                     <h1 class="brand-heading my-name">Harris Lynch</h1>
-                    <p class="intro-text">University of Illinois Computer Science Student<br></p>
+                    <p class="intro-text bio"><br>University of Illinois Computer Science Student<br></p>
                     <div class="row">
                         <ul class="list-inline">
                             <li style="padding-right:1.5em">
