--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     Remove this if you use the .htaccess -->
     <link rel="stylesheet" href="http://www.useragentman.com/shared/css/useragentmanExample.css" />
     <link rel="stylesheet" href="css/transition-circle-keyframes.css" />
-    
+
     <!-- IE doesn't do CSS3 Animations, so let's put in some JS code to fix. -->
-    
-    <!--[if lte IE 9 ]> 
-    <script type="text/javascript" src="/shared/js/jquery-1.7.2.min.js"></script>    
-    <script type="text/javascript" src="js/transition-circle-ie.js"></script>    
+
+    <!--[if lte IE 9 ]>
+    <script type="text/javascript" src="/shared/js/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="js/transition-circle-ie.js"></script>
     <![endif]-->
 
     <title>Harris Lynch</title>
@@ -63,7 +63,7 @@
                                 <a target="_blank" href="https://www.linkedin.com/in/harrislynch" class="custom-links">LinkedIn</a>
                             </li>
                             <li>
-                                <a target="_blank" href="Resume.pdf" class="custom-links">Resume</a>
+                                <a target="_blank" href="Harris_Lynch_Resume.pdf" class="custom-links">Resume</a>
                             </li>
                         </ul>
                     </div>
