--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8" />
     <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
     Remove this if you use the .htaccess -->
-    <link rel="stylesheet" href="http://www.useragentman.com/shared/css/useragentmanExample.css" />
+    <link rel="stylesheet" href="https://www.useragentman.com/shared/css/useragentmanExample.css" />
     <link rel="stylesheet" href="css/transition-circle-keyframes.css" />
 
     <!-- IE doesn't do CSS3 Animations, so let's put in some JS code to fix. -->
@@ -32,8 +32,8 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
