updating tag line

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="row">
                     <h1 class="brand-heading my-name">Harris Lynch</h1>
                     <img class="rocket" src="img/rocket.svg" width="50" height="auto"/>
-                    <p class="intro-text bio"><br>University of Illinois Computer Science Student<br></p>
+                    <p class="intro-text bio"><br>Software Engineer @ Citadel - Commodities Weather Team<br></p>
                     <div class="row">
                         <ul class="list-inline">
                             <li style="padding-right:1.5em">
